[package]
name = "niart"
version = "0.1.0"
authors = ["Michael Ziegler <michael.ziegler@proemion.com>"]
edition = "2018"

[dependencies]
piston = "0.48.0"
piston_window = "0.99.0"
piston2d-graphics = "0.32.0"
pistoncore-glutin_window = "0.62.1"
piston2d-opengl_graphics = "0.65.0"
gfx_device_gl = "0.15.0"
image = "0.21.2"
imageproc = "0.18.0"
specs = "0.14.3"
rand = "0.7"
